add dto types
