# controllers/blobs.go
@@ -1,8 +1,10 @@
 package controllers
 
 import (
-	pbbmsrv "blob-service/pb"
+	"blob-service/dto"
+	pbbl "blob-service/pb"
 	"context"
+	"strconv"
 	"time"
 
 	pbkv "github.com/streamingfast/substreams-sink-kv/pb/substreams/sink/kv/v1"
@@ -16,7 +18,8 @@ import (
 )
 
 const (
-	NOT_FOUND_BLOBS = "not_found_blobs" // no blobs found
+	NOT_FOUND_BLOBS = "blobs_not_found" // no blobs found
+	INVALID_SLOT    = "invalid_slot"    // invalid slot
 )
 
 type BlobsController struct {
@@ -27,30 +30,32 @@ func NewBlobsController(sinkClient pbkv.KvClient) *BlobsController {
 	return &BlobsController{sinkClient: sinkClient}
 }
 
-type BlobsResponse struct {
-	Blobs []*pbbmsrv.Blob `json:"blobs"`
-}
+type blobsBySlotRetType []*dto.Blob
 
 // BlobsBySlot
 //
-//	@Summary	Get Blobs by slot number
+//	@Summary	Get Blobs by slot
 //	@Tags		blobs
 //	@Produce	json
 //	@Param		slot	path		string	true	"Slot Number"
-//	@Success	200		{object}	response.ApiDataResponse{data=BlobsResponse}
-//	@Failure	404		{object}	response.ApiErrorResponse	"No blobs in this slot"
+//	@Success	200		{object}	response.ApiDataResponse{data=blobsBySlotRetType} "Sulccessful response"
+//	@Failure	400		{object}	response.ApiErrorResponse	"invalid_slot"	"Invalid slot
+//	@Failure	404		{object}	response.ApiErrorResponse	"blobs_not_found"	"No blobs found"
 //	@Failure	500		{object}	response.ApiErrorResponse
 //	@Router		/blobs/by_slot/{slot} [get]
 func (bc *BlobsController) BlobsBySlot(c *gin.Context) {
 
 	slot := c.Param("slot")
 
-	key := "slot:" + slot
+	if _, err := strconv.Atoi(slot); err != nil {
+		helper.ReportPublicErrorAndAbort(c, response.NewApiErrorBadRequest(INVALID_SLOT), err)
+		return
+	}
 
 	ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
 	defer cancel()
 
-	resp, err := bc.sinkClient.Get(ctx, &pbkv.GetRequest{Key: key})
+	resp, err := bc.sinkClient.Get(ctx, &pbkv.GetRequest{Key: "slot:" + slot})
 	if err != nil {
 		if ctx.Err() == context.DeadlineExceeded {
 			helper.ReportPublicErrorAndAbort(c, response.GatewayTimeout, err)
@@ -65,14 +70,17 @@ func (bc *BlobsController) BlobsBySlot(c *gin.Context) {
 		return
 	}
 
-	blobs := &pbbmsrv.Blobs{}
+	blobs := &pbbl.Blobs{}
 	err = proto.Unmarshal(resp.GetValue(), blobs)
 	if err != nil {
 		helper.ReportPublicErrorAndAbort(c, response.InternalServerError, err)
 		return
 	}
 
-	response.OkDataResponse(c, &response.ApiDataResponse{Data: &BlobsResponse{
-		Blobs: blobs.Blobs,
-	}})
+	resBlobs := []*dto.Blob{}
+	for _, blob := range blobs.Blobs {
+		resBlobs = append(resBlobs, dto.NewBlob(blob))
+	}
+
+	response.OkDataResponse(c, &response.ApiDataResponse{Data: resBlobs})
 }
